[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/item_connect_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Item_Inv.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1198, 32.0569 )

[node name="Item_Inv_1" type="Area2D" groups=[
"item",
]]
script = ExtResource( 2 )
connectors = [ 1, 0, 0, 0 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Item_Inv_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Item_Inv_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Item_Inv_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item_Inv_mouse_exited"]
